maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: ')' expected but 'if' found.
    if(!aMurNord(getX(),getY()){
    ^JediEscaper:71: error: ')' expected but 'if' found.
     if(!aMurOuest(getX(),getY()){
     ^JediEscaper:74: error: ')' expected but 'if' found.
    if(!aMurSud(getX(),getY()){
    ^JediEscaper:78: error: ')' expected but 'for' found.
    for(i<-1 to dir-1){gauche()}
    ^